Embedded Soundcloud Player
added embedded soundcloud player and new background art for Jon's sectiom

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,7 +125,7 @@ span:hover{
 }
 
 #four{
-	background-image: url("img/cubes.gif");
+	background-image: url("img/pattern.gif");
 
     background-attachment: fixed;
     background-position: center;
