--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ html, body {
 }
 span{
 	padding:2vh;
-	font-size:4vh;
+	font-size:2vw;
 	color:white;
 	cursor:pointer;
 }
@@ -50,7 +50,8 @@ span:hover{
 
 .albumart{
 		padding: 5vh;
-		height:80vh;
+		/*height:80vh;*/
+		width: 50vw;
 }
 .albumart:hover{
 	transform: scale(1.03, 1.03); /** default is 1, scale it to 1.5 */
